# bench2

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: integration.yml
admin/backend/: app.py  cron_manager.py
admin/backend/readers/: snapshot_reader.py  volume_reader.py
admin/backend/views/: dashboard.py  stats.py  volume.py
admin/frontend/: components.d.ts
admin/frontend/src/: index.css  (+1 more)
bench2/: cli.py
bench2/admin/: server.py
bench2/commands/: init.py  new.py  run.py  start_admin.py  stop_admin.py
bench_cli/: cli.py  exceptions.py  platform.py  utils.py
bench_cli/admin/: app.py  server.py
bench_cli/commands/: build.py  frappe_cmd.py  get_app.py  init.py  kill_orphaned.py  new.py  run.py  start_admin.py  stop.py  stop_admin.py  update.py  volume.py
bench_cli/config/: admin_config.py  bench_config.py  mariadb_config.py  redis_config.py  volume_config.py
bench_cli/core/: app.py  bench.py  site.py
bench_cli/managers/: admin_env_manager.py  honcho_process_manager.py  letsencrypt_manager.py  mariadb_manager.py  nginx_manager.py  process_manager.py  python_env_manager.py  redis_manager.py  supervisor_process_manager.py  volume_manager.py
bench_cli/tasks/: new_site_task.py  task_reader.py  task_runner.py  wrapper.py
docs/: admin.md  architecture.md  commands.md  config.md  production.md  tasks.md  volume.md  wireframes.md
tests/: test_config.py  test_core.py  test_mariadb_manager.py  test_nginx_config.py  test_tasks.py
tests/fixtures/: ci_bench.yml
tests/integration/: test_app_lifecycle.py
(+43 files in other folders)
